changes updated to git

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
           <a href="#" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Articles</a>
+          <a href="#" class="nav-link">Explore</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Videos</a>
+          <a href="#" class="nav-link">Community</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Snipets</a>
+          <a href="/login.html" class="nav-link">Login</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Guides</a>
+          <a href="/signup.html" class="nav-link">Register</a>
         </li>
       </ul>
       <div class="hamburguer">
@@ -58,183 +58,191 @@
           </div>
           <hr />
           <section class="questions-list">
-            <div class="question-card">
-              <div class="question-row">
-                <div class="vote-container">
-                  <button class="upvote-btn">
-                    <i class="fa fa-thumbs-up"></i>
-                  </button>
-                  <button class="downvote-btn">
-                    <i class="fa fa-thumbs-down"></i>
-                  </button>
+            <a href="questions.html">
+              <div class="question-card">
+                <div class="question-row">
+                  <div class="vote-container">
+                    <button class="upvote-btn">
+                      <i class="fa fa-thumbs-up"></i>
+                    </button>
+                    <button class="downvote-btn">
+                      <i class="fa fa-thumbs-down"></i>
+                    </button>
+                  </div>
+
+                  <div>
+                    <h6>How to create Responsive Website?</h6>
+                    <p>
+                      Posted 2 days ago by
+                      <span style="font-weight: bold">@theuser1</span>
+                    </p>
+                    <p>
+                      <b>Views: 303</b> &nbsp; <b>Answers: 3</b> &nbsp;
+                      <b>Comments: 15</b>
+                    </p>
+                  </div>
                 </div>
 
-                <div>
-                  <h6>How to create Responsive Website?</h6>
-                  <p>
-                    Posted 2 days ago by
-                    <span style="font-weight: bold">@theuser1</span>
-                  </p>
-                  <p>
-                    <b>Views: 303</b> &nbsp; <b>Answers: 3</b> &nbsp;
-                    <b>Comments: 15</b>
-                  </p>
-                </div>
-              </div>
-
-              <button
-                class="btn btn-dark"
-                style="
-                  display: flex;
-                  align-items: center;
-                  max-height: 80px;
-                  height: fit-content;
-                  width: fit-content;
-                  justify-content: center;
-                "
-              >
-                <lord-icon
-                  src="https://cdn.lordicon.com/bxxnzvfm.json"
-                  trigger="hover"
-                  style="width: 30px; height: 30px; padding: 0; margin: 0"
+                <button
+                  class="btn btn-dark"
+                  style="
+                    display: flex;
+                    align-items: center;
+                    max-height: 80px;
+                    height: fit-content;
+                    width: fit-content;
+                    justify-content: center;
+                  "
                 >
-                </lord-icon>
-                Answer
-              </button>
-            </div>
+                  <lord-icon
+                    src="https://cdn.lordicon.com/bxxnzvfm.json"
+                    trigger="hover"
+                    style="width: 30px; height: 30px; padding: 0; margin: 0"
+                  >
+                  </lord-icon>
+                  Answer
+                </button>
+              </div>
+            </a>
             <!-- second question card -->
-            <div class="question-card">
-              <div class="question-row">
-                <div class="vote-container">
-                  <button class="upvote-btn">
-                    <i class="fa fa-thumbs-up"></i>
-                  </button>
-                  <button class="downvote-btn">
-                    <i class="fa fa-thumbs-down"></i>
-                  </button>
+            <a href="questions.html">
+              <div class="question-card">
+                <div class="question-row">
+                  <div class="vote-container">
+                    <button class="upvote-btn">
+                      <i class="fa fa-thumbs-up"></i>
+                    </button>
+                    <button class="downvote-btn">
+                      <i class="fa fa-thumbs-down"></i>
+                    </button>
+                  </div>
+
+                  <div>
+                    <h6>How to create Responsive Website?</h6>
+                    <p>
+                      Posted 2 days ago by
+                      <span style="font-weight: bold">@theuser1</span>
+                    </p>
+                    <p>
+                      <b>Views: 303</b> &nbsp; <b>Answers: 3</b> &nbsp;
+                      <b>Comments: 15</b>
+                    </p>
+                  </div>
                 </div>
 
-                <div>
-                  <h6>How to create Responsive Website?</h6>
-                  <p>
-                    Posted 2 days ago by
-                    <span style="font-weight: bold">@theuser1</span>
-                  </p>
-                  <p>
-                    <b>Views: 303</b> &nbsp; <b>Answers: 3</b> &nbsp;
-                    <b>Comments: 15</b>
-                  </p>
-                </div>
-              </div>
-
-              <button
-                class="btn btn-dark"
-                style="
-                  display: flex;
-                  align-items: center;
-                  max-height: 80px;
-                  height: fit-content;
-                  width: fit-content;
-                  justify-content: center;
-                "
-              >
-                <lord-icon
-                  src="https://cdn.lordicon.com/bxxnzvfm.json"
-                  trigger="hover"
-                  style="width: 30px; height: 30px; padding: 0; margin: 0"
+                <button
+                  class="btn btn-dark"
+                  style="
+                    display: flex;
+                    align-items: center;
+                    max-height: 80px;
+                    height: fit-content;
+                    width: fit-content;
+                    justify-content: center;
+                  "
                 >
-                </lord-icon>
-                Answer
-              </button>
-            </div>
-            <div class="question-card">
-              <div class="question-row">
-                <div class="vote-container">
-                  <button class="upvote-btn">
-                    <i class="fa fa-thumbs-up"></i>
-                  </button>
-                  <button class="downvote-btn">
-                    <i class="fa fa-thumbs-down"></i>
-                  </button>
-                </div>
-
-                <div>
-                  <h6>How to create Responsive Website?</h6>
-                  <p>
-                    Posted 2 days ago by
-                    <span style="font-weight: bold">@theuser1</span>
-                  </p>
-                  <p>
-                    <b>Views: 303</b> &nbsp; <b>Answers: 3</b> &nbsp;
-                    <b>Comments: 15</b>
-                  </p>
-                </div>
+                  <lord-icon
+                    src="https://cdn.lordicon.com/bxxnzvfm.json"
+                    trigger="hover"
+                    style="width: 30px; height: 30px; padding: 0; margin: 0"
+                  >
+                  </lord-icon>
+                  Answer
+                </button>
               </div>
+            </a>
+            <a href="questions.html">
+              <div class="question-card">
+                <div class="question-row">
+                  <div class="vote-container">
+                    <button class="upvote-btn">
+                      <i class="fa fa-thumbs-up"></i>
+                    </button>
+                    <button class="downvote-btn">
+                      <i class="fa fa-thumbs-down"></i>
+                    </button>
+                  </div>
 
-              <button
-                class="btn btn-dark"
-                style="
-                  display: flex;
-                  align-items: center;
-                  max-height: 80px;
-                  height: fit-content;
-                  width: fit-content;
-                  justify-content: center;
-                "
-              >
-                <lord-icon
-                  src="https://cdn.lordicon.com/bxxnzvfm.json"
-                  trigger="hover"
-                  style="width: 30px; height: 30px; padding: 0; margin: 0"
+                  <div>
+                    <h6>How to create Responsive Website?</h6>
+                    <p>
+                      Posted 2 days ago by
+                      <span style="font-weight: bold">@theuser1</span>
+                    </p>
+                    <p>
+                      <b>Views: 303</b> &nbsp; <b>Answers: 3</b> &nbsp;
+                      <b>Comments: 15</b>
+                    </p>
+                  </div>
+                </div>
+
+                <button
+                  class="btn btn-dark"
+                  style="
+                    display: flex;
+                    align-items: center;
+                    max-height: 80px;
+                    height: fit-content;
+                    width: fit-content;
+                    justify-content: center;
+                  "
                 >
-                </lord-icon>
-                Answer
-              </button>
-            </div>
-            <div class="question-card">
-              <div class="question-row">
-                <div class="vote-container">
-                  <button class="upvote-btn">
-                    <i class="fa fa-thumbs-up"></i>
-                  </button>
-                  <button class="downvote-btn">
-                    <i class="fa fa-thumbs-down"></i>
-                  </button>
-                </div>
-
-                <div>
-                  <h6>How to create Responsive Website?</h6>
-                  <p>
-                    Posted 2 days ago by
-                    <span style="font-weight: bold">@theuser1</span>
-                  </p>
-                  <p>
-                    <b>Views: 303</b> &nbsp; <b>Answers: 3</b> &nbsp;
-                    <b>Comments: 15</b>
-                  </p>
-                </div>
+                  <lord-icon
+                    src="https://cdn.lordicon.com/bxxnzvfm.json"
+                    trigger="hover"
+                    style="width: 30px; height: 30px; padding: 0; margin: 0"
+                  >
+                  </lord-icon>
+                  Answer
+                </button>
               </div>
+            </a>
+            <a href="questions.html">
+              <div class="question-card">
+                <div class="question-row">
+                  <div class="vote-container">
+                    <button class="upvote-btn">
+                      <i class="fa fa-thumbs-up"></i>
+                    </button>
+                    <button class="downvote-btn">
+                      <i class="fa fa-thumbs-down"></i>
+                    </button>
+                  </div>
 
-              <button
-                class="btn btn-dark"
-                style="
-                  display: flex;
-                  align-items: center;
-                  max-height: 80px;
-                  height: fit-content;
-                  width: fit-content;
-                  justify-content: center;
-                "
-              >
-                <lord-icon
-                  src="https://cdn.lordicon.com/bxxnzvfm.json"
-                  trigger="hover"
-                  style="width: 30px; height: 30px; padding: 0; margin: 0"
+                  <div>
+                    <h6>How to create Responsive Website?</h6>
+                    <p>
+                      Posted 2 days ago by
+                      <span style="font-weight: bold">@theuser1</span>
+                    </p>
+                    <p>
+                      <b>Views: 303</b> &nbsp; <b>Answers: 3</b> &nbsp;
+                      <b>Comments: 15</b>
+                    </p>
+                  </div>
+                </div>
+
+                <button
+                  class="btn btn-dark"
+                  style="
+                    display: flex;
+                    align-items: center;
+                    max-height: 80px;
+                    height: fit-content;
+                    width: fit-content;
+                    justify-content: center;
+                  "
                 >
-                </lord-icon>
-                Answer
-              </button>
-            </div>
+                  <lord-icon
+                    src="https://cdn.lordicon.com/bxxnzvfm.json"
+                    trigger="hover"
+                    style="width: 30px; height: 30px; padding: 0; margin: 0"
+                  >
+                  </lord-icon>
+                  Answer
+                </button>
+              </div>
+            </a>
           </section>
         </div>
 
