--- a/login.html
+++ b/login.html
@@ -13,19 +13,26 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/login.css" />
+
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  />
     <!-- lottie plaeyer -->
+    <script src="https://kit.fontawesome.com/2f3adbaa6f.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="js/login.js"></script>
   </head>
   <body>
     <div class="container" id="container">
-      <div class="form-container sign-up-container">
+      <div class="col-md-6 col-sm-12 form-container sign-up-container">
         <form action="#">
           <h1>Create Account</h1>
           <div class="social-container">
+          
             <a href="#" class="social"><i class="fa fa-facebook-f"></i></a>
-            <a href="#" class="social"><i class="fa fa-google-plus-g"></i></a>
-            <a href="#" class="social"><i class="fa fa-linkedin-in"></i></a>
+            <a href="#" class="social"><i class="fa-brands fa-google"></i></i></a>
+            <a href="#" class="social"><i class="fa-brands fa-github"></i></a>
           </div>
           <span>or use your email for registration</span>
           <input type="text" placeholder="Name" />
@@ -40,13 +47,13 @@
           </div>
         </form>
       </div>
-      <div class="form-container sign-in-container">
+      <div class="col-md-6 col-sm-12  form-container sign-in-container">
         <form action="#">
           <h1>Sign in</h1>
           <div class="social-container">
             <a href="#" class="social"><i class="fa fa-facebook-f"></i></a>
-            <a href="#" class="social"><i class="fa fa-google-plus-g"></i></a>
-            <a href="#" class="social"><i class="fa fa-linkedin-in"></i></a>
+            <a href="#" class="social"><i class="fa-brands fa-google"></i></i></a>
+            <a href="#" class="social"><i class="fa-brands fa-github"></i></a>
           </div>
           <span>or use your account</span>
           <input type="email" placeholder="Email" />
